# deapi

./: .buildinfo  .pre-commit-config.yaml  CHANGES.rst  README.md  changes.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: changes.doctree  environment.pickle  index.doctree  intro.doctree  sg_execution_times.doctree
.doctrees/examples/: index.doctree  sg_execution_times.doctree
.doctrees/help/: dev_guide.doctree  help.doctree  index.doctree  pyDEServer.doctree
.doctrees/reference/: index.doctree
.github/workflows/: build.yaml  documentation.yaml
_downloads/38ff13cb3bfbd65f553272a7c91da631/: setting_up_stem.ipynb
_downloads/40a1893c0d88bab0015b7451c3667c08/: setting_up_stem.py
_downloads/43f0b60591d08ff2eae11c54214acd23/: viewing_the_sensor.ipynb
_downloads/4b987e299edee6150eba4a8f5d794c2c/: setting_virtual_masks.ipynb
_downloads/5680dc2a979f35ad6730ec6798425cae/: vdf_vbf.ipynb
_downloads/6f6360bb1e32aa697a2fb91ad190623b/: vdf_vbf.py
_sources/: index.rst.txt  intro.rst.txt  sg_execution_times.rst.txt
_sources/examples/: index.rst.txt
_sources/help/: pyDEServer.rst.txt
deapi/: __init__.py  client.py  conf.py  data_types.py  fake_client.py  index.rst  prop_dump.json  python_3_instruction.txt  release_notes.txt  version.py
deapi/buffer_protocols/: __init__.py  pb_2_3_0.py  pb_3_11_4.py  pb_3_19_3.py  pb_3_23_3.py  pb_3_6_1.py
deapi/fake_data/: __init__.py  base_fake_data.py  grains.py
deapi/simulated_server/: fake_server.py  initialize_server.py
deapi/tests/: conftest.py  test_client.py  test_fake_client.py
doc/: conf.py  index.rst
examples/: README.rst  index.html  sg_execution_times.html
help/: dev_guide.html  help.html  index.html  pyDEServer.html
reference/: index.html
(+64 files in other folders)
